--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "dependencies": {
+    "@nuxtjs/sitemap": "^6.1.2",
+    "nuxt": "^3.13.0",
+    "nuxt-gtag": "^3.0.1",
+    "nuxt-microcms-module": "^3.0.2",
+    "vue": "latest",
+    "vue-router": "latest"
+  },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "nuxt": "^3.8.1",
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5"
+    "@nuxt/eslint": "^0.6.0",
+    "@nuxtjs/tailwindcss": "^6.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.9.0",
+    "@typescript-eslint/parser": "^8.9.0",
+    "eslint": "^9.12.0",
+    "eslint-define-config": "^2.1.0",
+    "eslint-plugin-vue": "^9.29.0",
+    "sass": "^1.79.5",
+    "typescript": "^5.6.3"
   }
 }
